# pipeline-proof-concept

./: .gitignore  1_generate_mock_data.py  2_process_data.py  3_process_data_cloud.py  4_seed_history.py  5_export_report.py  6_reingest_fixed_data.py  99_fetch_errors.py  99_generate_and_upload_mock_data.py  LICENSE  main.py  models.py  pyproject.toml  readme.md  test_connection.py  upload_test_file.py
.github/workflows/: delete_records.yaml  weekly_pipeline.yaml
admin-tools/: 2_reingest_fixed_data.py  99_generate_and_upload_mock_data.py
admin_tools/: demo_app.py  generate_and_upload_mock_data.py  mock_azure.py  reingest_fixed_data.py  web_uploader.py
pipeline/: 2_export_report.py  delete_records.py  export_report.py  process_data_cloud.py
