[project]
name = "pipeline-proof-concept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2025.8.0",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
]
